--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main id="main">
       <div class="header">
         <h1>Gandalf</h1>
-        <p class="subtitle"> Istar(Wizard), The Grey, The White, Servant of the Secret Fire, Wielder of the Flame of Anor, Elf-firned.</p>
+        <p class="subtitle"> Istar(Wizard), The Grey, The White, Servant of the Secret Fire, Wielder of the Flame of Anor, Elf-friend.</p>
       </div>
       <section class="img-container">
         <figure id="img-div">
